<resources>
    <string name="app_name">礼包精灵</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gift_title">礼包精灵</string>
    <string name="open_title">开服</string>
    <string name="hot_title">热门游戏</string>
    <string name="special_title">独家企业</string>
    <string name="title_search">搜索</string>
    <string name="open_fu">开服</string>
    <string name="open_ce">开测</string>
    <string name="fresh">查看更多</string>
    <string name="net_name">运营商:</string>
    <string name="gift_button_text">立即领取</string>
    <string name="openfu_button_text">查看</string>
    <string name="hot_text_top">精品推荐</string>
    <string name="hot_text_bottom">热门推荐</string>
    <string name="hot_size">大小:</string>
    <string name="hot_people">人在玩</string>
    <string name="hot_type">类型:</string>
    <string name="special_left">暴打星期三</string>
    <string name="special_right">新游周刊</string>
    <string name="less_gift">淘号</string>
    <string name="second_validity">有效期:</string>
    <string name="second_num">礼包剩余:</string>
    <string name="second_info">礼包说明</string>
    <string name="second_get_way">兑换方式</string>
    <string name="left">剩余</string>
    <string name="gift_button_less_text">马上淘号</string>
    <string name="game_description">游戏介绍</string>
    <string name="download">立即下载</string>
    <string name="loading">Loading......</string>
    <string name="un_known">未知</string>
    <string name="un_download">暂无下载</string>
    <string name="search_hint">请输入关键字</string>
    <string name="user_singin">会员注册</string>
    <string name="user_login">会员登录</string>
    <string name="ring_in">注册</string>
    <string name="please_login">请登录</string>
    <string name="id_erroy">用户ID应该大于3小于18个字符</string>
    <string name="pwd_erroy">密码字符不正确，必须大于4个字符，小于15个字符</string>
    <string name="name_erroy_one">昵称不能为空</string>
    <string name="name_erroy_two">名字其实不需要那么长，5个字符就够啦！</string>
    <string name="sing_success">注册成功</string>
    <string name="login_id">请输入ID/邮箱/手机号码</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_btn">立即登录</string>
    <string name="login_success">登录成功</string>
    <string name="home">主页</string>
    <string name="my_gift">我的礼包</string>
    <string name="send_email">提个建议</string>
    <string name="about_us">关于我们</string>
    <string name="weixin">微信号</string>
    <string name="phone">手机访问</string>
    <string name="pc_local">电脑网站</string>
    <string name="email">联系邮箱</string>
    <string name="player_people">玩家客服</string>
    <string name="versionName">当前版本</string>
    <string name="weixin_1">wxy_1688</string>
    <string name="phone_1">http://m.168wan.com</string>
    <string name="pc_local_1">http://www.168wan.com</string>
    <string name="email_1">842244066@qq.com</string>
    <string name="player_people_1">861990633</string>
    <string name="send_email_title">我要提建议</string>
    <string name="send_email_hint">  告诉我们有啥做的不好，不方便的地方，我们会努力改进，我们会给提出的好的建议的玩家奖励神秘礼品哦~</string>
    <string name="send_emial_contact">手机/QQ:</string>
    <string name="send_email_hint_contact">联系方式/手机号码或QQ号码</string>
    <string name="email_send_btn">速度改进</string>
    <string name="send_email_limit">输入不能为空</string>
    <string name="net_error">网络不给力哦~</string>
    <string name="change_code">兑换码</string>
    <string name="copy">复制</string>
    <string name="cancle">取消</string>
    <string name="close">关闭</string>
    <string name="sever_error">服务器维护中</string>
    <string name="overtime">过期时间:</string>
    <string name="copy_success">复制到剪切板成功</string>
</resources>


