<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qianfeng.yyz.myswift.activity.SendEmailActivity">
<RelativeLayout
    android:background="@color/head_tab"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <RelativeLayout
        android:onClick="back"
        android:layout_width="40dp"
        android:layout_height="40dp">
    <ImageView
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/back"
        />
    </RelativeLayout>
    <TextView
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/send_email_title"
        />
</RelativeLayout>
    <EditText
        android:singleLine="false"
        android:gravity="left|top"
        android:id="@+id/send_email_contacts"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/send_email_hint"
        android:textSize="14sp"

        android:textColor="@color/dark"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/send_emial_contact"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:inputType="number"
            android:id="@+id/send_email_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/send_email_hint_contact"
            android:textSize="14sp"
            android:background="@color/white"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_rectangle"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:onClick="send"
        android:text="@string/email_send_btn"
        />

</LinearLayout>
