<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/rounded_rectangle_white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/dialog_top"
        android:text="@string/change_code"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/dialog_tv" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/dialog_bootom"
            android:text="@string/copy"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/copy" />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/dialog_bootom_right"
            android:text="@string/cancle"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/cancle" />

    </LinearLayout>


</LinearLayout>