<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.LogInActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/head_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <RelativeLayout
            android:onClick="back"
            android:layout_width="40dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/back"
                android:scaleType="centerCrop"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/user_login"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring_in"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:onClick="ringin"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_user"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            />
        <EditText
            android:inputType="number"
            android:hint="@string/login_id"
            android:textSize="15sp"
            android:background="@color/white"
            android:id="@+id/login_id"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/special_bottom"
        />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_password"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            />
        <EditText
            android:inputType="textPassword"
            android:textSize="15sp"
            android:hint="@string/login_pwd"
            android:background="@color/white"
            android:id="@+id/login_pwd"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/special_bottom"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/login_btn"
        android:onClick="login"
        />
</LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:visibility="gone"
        android:id="@+id/login_in_load"
        android:background="@color/special_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ProgressBar
            android:layout_gravity="center_vertical"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/loading"
            />
    </LinearLayout>
    </FrameLayout>


