<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.qianfeng.yyz.myswift.fragment.second.SecondOpenFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/open_second_line"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<RelativeLayout
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_margin="10dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/open_second_img"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_alignTop="@id/open_second_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/open_second_name"
        android:textColor="@color/dark"
        android:layout_toRightOf="@id/open_second_img"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_second_type_text"
        android:text="@string/hot_type"
        android:layout_toRightOf="@id/open_second_img"
        android:layout_alignBottom="@id/open_second_img"
        android:layout_alignTop="@id/open_second_img"
        android:gravity="center_vertical"
        />

    <TextView
        android:layout_alignBottom="@id/open_second_img"
        android:layout_alignTop="@id/open_second_img"
        android:gravity="center_vertical"
        android:id="@+id/open_second_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/open_second_type_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/open_second_type_text"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/open_second_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/open_second_img"
        android:text="@string/hot_size"
        android:layout_toRightOf="@id/open_second_img"
        />
    <TextView
        android:id="@+id/open_second_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/open_second_img"
        android:layout_toRightOf="@id/open_second_size_text"
        />
</RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/open_second_hslv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:scrollbars="none"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/open_second_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </LinearLayout>

    </HorizontalScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/dark"
        android:text="@string/game_description"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_second_game_description"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="50dp"
        />
    </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/open_second_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/head_tab"
        android:layout_above="@+id/open_second_bottom"
        />
    <RelativeLayout
        android:id="@+id/open_second_bottom"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">

        <Button
            android:id="@+id/open_second_download"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/download"
            android:gravity="center"
            />


    </RelativeLayout>
    <LinearLayout
        android:background="@color/white"
        android:id="@+id/open_second_loading"
        android:orientation="horizontal"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            />
        <TextView
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_gravity="center"
            />

    </LinearLayout>
</RelativeLayout>
