<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qianfeng.yyz.myswift.fragment.second.SecondGiftFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_above="@+id/second_gift_bottom"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/second_top"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/gift_second_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/second_cirimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/head_tab"
            app:civ_border_overlay="true"
            app:civ_border_width="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:background="@color/special_bottom">

            <TextView
                android:id="@+id/second_validity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/second_validity"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/second_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/second_validity_text"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/second_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/head_tab"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/second_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/second_num"
                android:text="@string/second_num"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_below="@+id/second_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/second_info" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#ff0000" />

        <TextView
            android:textColor="@color/dark"
            android:id="@+id/second_gift_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" />


        <TextView
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/second_get_way" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#ff0000" />

        <TextView
            android:textColor="@color/dark"
            android:id="@+id/second_get_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
    <RelativeLayout
        android:id="@+id/second_gift_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/head_tab" />

        <Button
            android:id="@+id/second_gift_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/gift_button_text"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/second_gift_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/my_gift_green" />

    </RelativeLayout>
</RelativeLayout>
